feat: Add multi-provider support with Windows compatibility
- Added modelProvider field to Profile interface for proper provider configuration
- Implemented Windows compatibility fixes (.cmd extension, shell: true)
- Added support for MiniMax API with correct model names and environment variables
- Added support for AnyRouter API configuration
- Used -c config overrides for better codex CLI compatibility
- Added comprehensive testing and troubleshooting documentation
- Updated .gitignore to exclude credentials and local config files

Tested and working:
- MiniMax API: Fully functional with MiniMax-M2 model
- Multi-profile selection: Users can choose between different providers
- Secure credential storage: Uses Windows Credential Vault (keytar)

Known issues:
- AnyRouter experiencing API compatibility issues (documented in TROUBLESHOOTING.md)

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,21 @@ dist/
 *.tsbuildinfo
 coverage/
 ai-claude-start/
+
+# Local codex and claude configurations
+.codex/
+.claude/
+
+# Test files with credentials (should not be committed)
+test-*.js
+test-*.ps1
+test-*.bat
+test-*.json
+update-*-credential.js
+update-*-profile.js
+update-*-key.js
+store-*-credential.js
+check-*.js
+debug-*.js
+setup-*.txt
+*.sh
